:art: table 表头固定

--- a/app/src/assets/scss/protyle/_wysiwyg.scss
+++ b/app/src/assets/scss/protyle/_wysiwyg.scss
@@ -323,6 +323,10 @@
         z-index: 2;
         box-shadow: 0 -1px 0 var(--b3-border-color) inset, 0 -1px 0 0 var(--b3-border-color);
         background-color: var(--b3-theme-background);
+
+        th {
+          border-top: 0;
+        }
       }
     }
 
