--- a/app/appearance/themes/daylight/theme.css
+++ b/app/appearance/themes/daylight/theme.css
@@ -136,6 +136,7 @@
 
     /* 阴影 */
     --b3-point-shadow: 0 0 1px 0 rgba(0, 0, 0, .1), 0 0 2px 0 rgba(0, 0, 0, .2);
+    --b3-card-shadow: rgba(0, 0, 0, .2) 0px 1px 3px 1px;
     --b3-dialog-shadow: 0 8px 24px rgba(0, 0, 0, .2);
     --b3-button-shadow: 0 5px 5px -3px rgb(0 0 0 / .2), 0 8px 10px 1px rgb(0 0 0 / .14), 0 3px 14px 2px rgb(0 0 0 / .12);
 
