--- a/app/src/assets/scss/component/_card.scss
+++ b/app/src/assets/scss/component/_card.scss
@@ -17,8 +17,7 @@
 
   &:hover {
     background-color: var(--b3-list-hover);
-    transform: translate(0px, -2px);
-    box-shadow: var(--b3-button-shadow);
+    box-shadow: var(--b3-card-shadow);
   }
 
   &s {
