--- a/app/appearance/themes/midnight/theme.css
+++ b/app/appearance/themes/midnight/theme.css
@@ -137,9 +137,9 @@
     --b3-switch-background: #444746;
     --b3-switch-border: #8e918f;
     --b3-switch-hover: rgba(253, 252, 251, .10);
-    --b3-switch-checked: #0842a0;
+    --b3-switch-checked: var(--b3-theme-primary);
     --b3-switch-checked-background: #a8c7fa;
-    --b3-switch-checked-hover: #0842a0;
+    --b3-switch-checked-hover: var(--b3-theme-primary);
     --b3-switch-checked-hover2: rgba( 253,252,251, .10);
 
     /* 阴影 */
