--- a/app/appearance/themes/daylight/theme.css
+++ b/app/appearance/themes/daylight/theme.css
@@ -55,7 +55,7 @@
     --b3-menu-background: var(--b3-theme-surface);
 
     /* 提示 */
-    --b3-tooltips-background: rgba(0, 0, 0, .9);
+    --b3-tooltips-background: #312f35;
     --b3-tooltips-color: var(--b3-theme-background-light);
     --b3-tooltips-second-color: #7d7c7a;
     --b3-tooltips-shadow: 0 2px 8px rgba(0, 0, 0, .1);
