--- a/app/src/assets/scss/component/_chip.scss
+++ b/app/src/assets/scss/component/_chip.scss
@@ -18,7 +18,7 @@
   align-items: center;
   box-sizing: border-box;
   padding: 8px 12px;
-  border-radius: 8px;
+  border-radius: var(--b3-border-radius);
   transition: var(--b3-transition);
   text-decoration: none;
 
