:art: https://github.com/siyuan-note/siyuan/issues/12887

--- a/app/src/assets/scss/protyle/_toolbar.scss
+++ b/app/src/assets/scss/protyle/_toolbar.scss
@@ -67,6 +67,8 @@
     padding: 8px 0;
     display: flex;
     flex-direction: column;
+    min-width: 320px;
+    max-width: 50vw;
   }
 
   &-util {
