--- a/app/src/assets/scss/util/_responsive.scss
+++ b/app/src/assets/scss/util/_responsive.scss
@@ -71,8 +71,7 @@
     &__panel {
       flex-direction: column;
 
-      & > .b3-list,
-      & > .history__diff {
+      & > .history__side {
         height: 40%;
         overflow: auto;
         padding-bottom: 8px;
