--- a/app/src/assets/scss/business/_av.scss
+++ b/app/src/assets/scss/business/_av.scss
@@ -518,7 +518,7 @@
         opacity: 1;
       }
 
-      &__item[data-type="nobg"] .b3-menu__label {
+      &__item[data-type="nobg"] {
         cursor: auto;
       }
 
