--- a/app/src/assets/scss/component/_list.scss
+++ b/app/src/assets/scss/component/_list.scss
@@ -111,12 +111,9 @@
 
     &__icon {
       svg, img {
-        float: left;
-        margin: 3px 0;
         height: 16px;
         width: 16px;
         color: var(--b3-theme-on-surface);
-        border-radius: var(--b3-border-radius);
       }
 
       text-align: center;
@@ -129,6 +126,8 @@
       padding: 0 4px;
       flex-shrink: 0;
       border-radius: var(--b3-border-radius);
+      display: flex;
+      align-items: center;
 
       &:hover {
         color: var(--b3-theme-on-background);
