--- a/app/src/assets/scss/business/_av.scss
+++ b/app/src/assets/scss/business/_av.scss
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   display: flex;
   max-width: 100%;
+  margin: 4px 0 !important;
 
   &:hover .av__views .block__icon {
     opacity: 1;
