:art: https://github.com/siyuan-note/siyuan/issues/13036

--- a/app/src/assets/scss/business/_color.scss
+++ b/app/src/assets/scss/business/_color.scss
@@ -14,6 +14,7 @@
   border-radius: var(--b3-border-radius);
   font-size: 16px;
   font-weight: 500;
+  color: var(--b3-theme-on-background);
 
   &--list {
     margin: 0 8px 0 0;
