--- a/app/src/assets/scss/business/_color.scss
+++ b/app/src/assets/scss/business/_color.scss
@@ -4,7 +4,7 @@
   margin: 4px;
   border: 0;
   transition: var(--b3-transition);
-  box-shadow: 0 0 0 1px var(--b3-theme-surface-lighter) inset;
+  box-shadow: 0 0 0 1px var(--b3-list-hover) inset;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -21,6 +21,6 @@
   }
 
   &:hover:not(.color__square--list) {
-    box-shadow: 0 0 0 1px var(--b3-theme-surface-lighter) inset, 0 0 0 4px var(--b3-theme-background);
+    box-shadow: 0 0 0 1px var(--b3-list-hover) inset, 0 0 0 4px var(--b3-theme-background);
   }
 }
