--- a/app/src/assets/scss/protyle/_wysiwyg.scss
+++ b/app/src/assets/scss/protyle/_wysiwyg.scss
@@ -322,7 +322,7 @@
         top: 1px;
         z-index: 2;
         box-shadow: 0 -1px 0 var(--b3-border-color) inset, 0 -1px 0 0 var(--b3-border-color);
-        background-color: var(--b3-theme-background);
+        background-color: var(--b3-parent-background);
 
         th {
           border-top: 0;
