:lipstick: https://github.com/siyuan-note/siyuan/issues/13052

--- a/app/src/assets/scss/business/_av.scss
+++ b/app/src/assets/scss/business/_av.scss
@@ -143,7 +143,7 @@
     &--hl {
       &:not(.av__row--header) .av__cell,
       &:not(.av__row--header) .av__firstcol {
-        background-color: var(--b3-av-background-hl) !important;
+        background-color: var(--b3-theme-primary-lightest);
       }
 
       .av__firstcol svg {
@@ -175,10 +175,6 @@
       &:hover .av__calc,
       &.av__row--show .av__calc {
         opacity: 1;
-      }
-
-      .av__colsticky {
-        background-color: var(--b3-parent-background); // 保证盯住时无计算结果的列不被覆盖
       }
 
       .av__calc {
@@ -220,7 +216,7 @@
         }
 
         &:hover {
-          background-color: var(--b3-av-hover);
+          background-color: var(--b3-list-hover);
         }
       }
     }
@@ -236,7 +232,7 @@
 
         &:hover,
         &:focus {
-          background-color: var(--b3-av-hover);
+          background-color: var(--b3-list-hover);
           box-shadow: none;
         }
       }
@@ -302,13 +298,13 @@
     }
 
     &--select {
-      background-color: var(--b3-menu-background);
+      background-color: var(--b3-theme-primary-lightest);
       box-shadow: 2px 2px 0 var(--b3-theme-primary-lighter) inset, -2px -2px 0 var(--b3-theme-primary-lighter) inset;
       border-radius: var(--b3-border-radius);
     }
 
     &--active {
-      background-color: var(--b3-menu-background);
+      background-color: var(--b3-theme-primary-lightest);
     }
 
     &--header {
@@ -319,7 +315,7 @@
       border-right-color: transparent;
 
       &:hover {
-        background-color: var(--b3-av-hover);
+        background-color: var(--b3-list-hover);
       }
 
       .av__celltext {
@@ -434,11 +430,7 @@
     left: 0;
     z-index: 2; // 需大于 av__widthdrag，否则横行滚动后，拖拽会悬浮于 stick 列上
     display: flex;
-
-    &.av__firstcol,
-    & > div:not(.av__cell--select):not(.av__cell--active):not(.av__calc--ashow) {
-      background-color: var(--b3-parent-background);
-    }
+    background-color: var(--b3-parent-background);
   }
 
   &__widthdrag {
@@ -527,45 +519,6 @@
       &__item--current:not([data-type="nobg"]) {
         background-color: var(--b3-list-hover);
       }
-    }
-  }
-}
-
-.protyle-wysiwyg--select {
-  .av__row--header,
-  .av__row--footer,
-  .av__row--footer .av__colsticky,
-  .av__row--select .av__cell,
-  .av__colsticky.av__firstcol,
-  .av__colsticky > div,
-  .av__cell--select,
-  .av__cell--active,
-  .av__counter {
-    background-color: var(--b3-av-background-hl) !important;
-  }
-}
-
-.protyle-wysiwyg--hl {
-  .av__row--header,
-  .av__row--footer,
-  .av__row--footer .av__colsticky,
-  .av__row--select .av__cell,
-  .av__colsticky.av__firstcol,
-  .av__colsticky > div,
-  .av__cell--select,
-  .av__cell--active,
-  .av__counter {
-    background-color: var(--b3-av-background-hl) !important;
-    transition: var(--b3-background-transition);
-  }
-}
-
-.dragover__top,
-.dragover__bottom {
-  .av__colsticky {
-    &.av__firstcol,
-    & > div:not(.av__cell--select):not(.av__cell--active):not(.av__calc--ashow) {
-      background-color: transparent;
     }
   }
 }
