:lipstick: https://github.com/siyuan-note/siyuan/issues/13036

--- a/app/src/assets/scss/business/_color.scss
+++ b/app/src/assets/scss/business/_color.scss
@@ -1,6 +1,7 @@
 .color__square {
   height: 26px;
   width: 26px;
+  line-height: 26px;
   margin: 4px;
   border: 0;
   transition: var(--b3-transition);
