:art: https://github.com/siyuan-note/siyuan/issues/13098

--- a/app/src/assets/scss/protyle/_wysiwyg.scss
+++ b/app/src/assets/scss/protyle/_wysiwyg.scss
@@ -480,6 +480,7 @@
       left: 0;
       top: 0;
       border-radius: var(--b3-border-radius);
+      pointer-events: none;
     }
 
     .table[custom-pinthead="true"] thead,
