改进引述块样式和高亮样式 (#13143)
* 引述块的左边框不需要圆角

* 让高亮覆盖引述块的左边框

* 让子列表块的高亮与其他块的高亮对齐

* 让高亮覆盖引述块的左边框

--- a/app/src/assets/scss/component/_typography.scss
+++ b/app/src/assets/scss/component/_typography.scss
@@ -124,6 +124,8 @@
     border-left: .25em solid var(--b3-theme-surface-lighter);
     background-color: var(--b3-bq-background);
     margin: 4px 0;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
   }
 
   .h1,
