--- a/app/src/assets/scss/protyle/_wysiwyg.scss
+++ b/app/src/assets/scss/protyle/_wysiwyg.scss
@@ -55,6 +55,16 @@
       }
     }
 
+    &.bq {
+      &.protyle-wysiwyg--select,
+      &.protyle-wysiwyg--hl {
+        &::after {
+          left: -0.25em;
+          width: calc(100% + 0.25em);
+        }
+      }
+    }
+
     .bq {
       .dragover {
         &__top:not(.av__row) {
@@ -173,6 +183,14 @@
         padding-left: 16px;
         padding-top: 0;
         padding-bottom: 0;
+
+        &.protyle-wysiwyg--select,
+        &.protyle-wysiwyg--hl {
+          &::after {
+            left: 16px;
+            width: calc(100% - 16px);
+          }
+        }
       }
     }
 
