--- a/app/src/assets/scss/protyle/_wysiwyg.scss
+++ b/app/src/assets/scss/protyle/_wysiwyg.scss
@@ -22,7 +22,7 @@
     position: relative;
 
     &[custom-riff-decks] {
-      box-shadow: 3px 0 0 -1px var(--b3-protyle-inline-mark-background) inset;
+      box-shadow: 2px 0 0 0 var(--b3-protyle-inline-mark-background) inset;
     }
 
     [spellcheck] {
