:art: https://ld246.com/article/1728436915565

--- a/app/src/assets/scss/business/_emojis.scss
+++ b/app/src/assets/scss/business/_emojis.scss
@@ -60,6 +60,7 @@
     margin: 1px;
     overflow: hidden;
     border-radius: var(--b3-border-radius);
+    min-width: 32px;
 
     img, svg {
       height: 24px;
