:bug: https://github.com/siyuan-note/siyuan/issues/13144

--- a/app/appearance/themes/daylight/theme.css
+++ b/app/appearance/themes/daylight/theme.css
@@ -171,7 +171,7 @@
 
     /* PDF */
     --b3-pdf-selection: #d0e9c8;
-    --b3-pdf-sidebar-width: 200px;
+    --sidebar-width: 200px;
     --b3-pdf-offset: 0;
     --b3-pdf-background1: var(--b3-theme-error);
     --b3-pdf-background2: #f5822e;
