--- a/app/src/assets/scss/protyle/_protyle.scss
+++ b/app/src/assets/scss/protyle/_protyle.scss
@@ -284,10 +284,6 @@
   &__action {
     transition: opacity 150ms linear;
     opacity: 0;
-
-    .b3-button {
-      margin-top: 8px;
-    }
   }
 
   &__icon {
@@ -301,7 +297,7 @@
     font-family: var(--b3-font-family-emoji);
     z-index: 1;
     position: relative;
-    margin-top: -40px;
+    margin-top: -48px;
     margin-bottom: 8px;
 
     img, svg {
@@ -318,6 +314,7 @@
 
   &__img {
     width: 100%;
+    margin-bottom: 8px;
 
     img {
       object-fit: cover;
