:art: https://github.com/siyuan-note/siyuan/pull/13143

--- a/app/src/assets/scss/component/_typography.scss
+++ b/app/src/assets/scss/component/_typography.scss
@@ -117,6 +117,10 @@
     border-bottom: 2px solid var(--b3-card-info-color);
   }
 
+  blockquote {
+    position: relative;
+  }
+
   blockquote,
   .bq {
     &:before {
