--- a/app/src/assets/scss/component/_list.scss
+++ b/app/src/assets/scss/component/_list.scss
@@ -284,6 +284,11 @@
         color: var(--b3-theme-on-background);
         background-color: var(--b3-list-icon-hover);
       }
+
+      &--warning:hover {
+        color: var(--b3-theme-error);
+        background-color: var(--b3-list-icon-hover);
+      }
     }
 
     .counter {
