:art: https://github.com/siyuan-note/siyuan/issues/13451

--- a/app/src/assets/scss/component/_typography.scss
+++ b/app/src/assets/scss/component/_typography.scss
@@ -279,7 +279,7 @@
     display: inline-block !important;
     position: absolute !important;
     width: 1px !important;
-    right: 8px !important;
+    right: 9px !important;  // https://github.com/siyuan-note/siyuan/issues/13451
     outline: 0 !important;
     background: 0 0 !important;
     text-decoration: initial !important;
