--- a/app/src/assets/scss/mobile.scss
+++ b/app/src/assets/scss/mobile.scss
@@ -260,6 +260,7 @@
     flex-direction: column;
     height: 100%;
     box-sizing: border-box;
+    position: relative;
 
     &__list {
       overflow: auto;
