:art: https://github.com/siyuan-note/siyuan/issues/14379

--- a/app/src/assets/scss/protyle/_wysiwyg.scss
+++ b/app/src/assets/scss/protyle/_wysiwyg.scss
@@ -553,7 +553,7 @@
   }
 
   &--animate {
-    animation: scale .3s ease-in-out;
+    animation: bottom2Top .3s ease-in-out;
   }
 
   div[data-type="NodeMathBlock"] {
