:lipstick: Improve mouse selection code blocks Fix https://github.com/siyuan-note/siyuan/issues/14644 (#14646)

--- a/app/src/assets/scss/protyle/_wysiwyg.scss
+++ b/app/src/assets/scss/protyle/_wysiwyg.scss
@@ -536,8 +536,15 @@
     transition: var(--b3-background-transition);
   }
 
-  &--hiderange ::selection {
-    background-color: transparent;
+  &--hiderange {
+    ::selection {
+      background-color: transparent;
+    }
+
+    .hljs ::selection {
+      background-color: transparent;
+      color: inherit;
+    }
   }
 
   // https://github.com/siyuan-note/siyuan/issues/11589
